# libONVIF

./: .appveyor.yml  .azure-pipelines.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  INSTALL  INSTALLZHCN  INSTALL_CH  INSTALL_EN  README.md  conanfile.py  info.json
CMake/: libONVIFConfig.cmake.in
buildProfiles/: androidArmv7LinuxHost.profile  androidArmv7WinHost.profile  androidArmv8LinuxHost.profile  androidArmv8WinHost.profile  androidx86LinuxHost.profile  androidx86WinHost.profile  androidx86_64LinuxHost.profile  androidx86_64WinHost.profile  emscripten.profile  raspbian.profile
doc/: CMakeLists.txt  Doxyfile.in
hostProfiles/: androidArmv7.profile  androidArmv8.profile  androidx86.profile  androidx86_64.profile  raspberrypios-bullseye.profile
src/: CMakeLists.txt  Client.cpp  Client.h  CmdLineParser.cpp  CmdLineParser.h  DeleterDuplicator.h  DeviceProbe.cpp  DeviceProbe.h  DiscoveryMatch.cpp  DiscoveryMatch.h  Doxyfile.in  JsonHelper.cpp  JsonHelper.h  NotificationFilter.cpp  NotificationFilter.h  OnvifAnalyticsClient.cpp  OnvifAnalyticsClient.h  OnvifClients.h  OnvifDevice.cpp  OnvifDevice.h  OnvifDeviceClient.cpp  OnvifDeviceClient.h  OnvifDiscovery.cpp  OnvifDiscovery.h  OnvifDiscoveryClient.cpp  OnvifDiscoveryClient.h  OnvifDisplayClient.cpp  OnvifDisplayClient.h  OnvifEventClient.cpp  OnvifEventClient.h  OnvifImagingClient.cpp  OnvifImagingClient.h  OnvifMedia2Client.cpp  OnvifMedia2Client.h  OnvifMediaClient.cpp  OnvifMediaClient.h  OnvifPtzClient.cpp  OnvifPtzClient.h  OnvifPullPoint.cpp  OnvifPullPoint.h  (+26 more)
src/gsoap/: AbsoluteOrRelativeTime.h  AbsoluteOrRelativeTimeType.cpp  AbsoluteOrRelativeTimeType.h  dom.cpp  duration.c  duration.h  httpda.c  httpda.h  mecevp.c  mecevp.h  qdatetime.cpp  qdatetime.h  qstring.cpp  qstring.h  qstringCompare.cpp  qstringCompare.h  smdevp.c  smdevp.h  stdsoap2.cpp  stdsoap2.h  threads.h  wsaapi.c  wsaapi.h  wsseapi-lite.c  wsseapi-lite.h  wsseapi.c  wsseapi.h
src/headerParser/: main.cpp
wsdl/: start_synthesis.bat
